--- a/api/.htaccess
+++ b/api/.htaccess
@@ -1,9 +1,10 @@
 RewriteEngine On
 
 # Redireciona HTTPS SSL
-RewriteCond %{HTTP:X-Forwarded-Proto} !https
-RewriteCond %{HTTPS} off
-RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+#RewriteCond %{HTTP:X-Forwarded-Proto} !https
+#RewriteCond %{HTTPS} off
+#RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
 #RewriteCond %{SERVER_PORT} 80
 #RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI}/$1 [R,L]
 #RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
