--- a/api/.htaccess
+++ b/api/.htaccess
@@ -1,15 +1,5 @@
 RewriteEngine On
 
-# Redireciona HTTPS SSL
-#RewriteCond %{HTTP:X-Forwarded-Proto} !https
-#RewriteCond %{HTTPS} off
-#RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-
-#RewriteCond %{SERVER_PORT} 80
-#RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI}/$1 [R,L]
-#RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
-#RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-
 ## Begin - Rewrite rules to block out some common exploits.
 # If you experience problems on your site then comment out the operations listed
 # below by adding a # to the beginning of the line.
@@ -45,10 +35,10 @@ RewriteRule .* index.php [L]
 ## End - Joomla! core SEF Section.
 
 # Página Error 404
-#ErrorDocument 404 /404.php
+ErrorDocument 404 /404.php
 
 # Página Error 500
-#ErrorDocument 500 /500.php
+ErrorDocument 500 /500.php
 
 #php_flag log_errors On
 #php_value error_log /var/log/httpd/dataprol1/php_error_log_api
